--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <p class="collapse navbar-collapse" id="navbarSupportedContent">
+     Copyright 2023 &copy; <a class="nav-link" routerLink=""> Store</a>, Todos los derechos reservados 
+                
+        
+      </p>
+    </div>
+  </nav>
