[+] se modifico headder, footer, login, register

--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,1 +1,35 @@
-<p>home works!</p>
+
+<div class="container">
+    <div class="d-flex gap-4 m-5">
+
+        <div class="card" style="width: 30%;">
+            <img src="https://lovefoodfeed.com/wp-content/uploads/2023/01/Valentines-cupcakes-px-1200-01-1024x1024.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Cupcake 1</h5>
+                <p class="card-text">Delicioso cupcake de chocolate</p>
+                <h5>$50</h5>
+                <a href="#" class="btn btn-primary">Compra ahora</a>
+            </div>
+        </div>
+        <div class="card" style="width: 30%;">
+            <img src="https://lovefoodfeed.com/wp-content/uploads/2023/01/Valentines-cupcakes-px-1200-01-1024x1024.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Cupcake 1</h5>
+                <p class="card-text">Delicioso cupcake de chocolate</p>
+                <h5>$50</h5>
+                <a href="#" class="btn btn-primary">Compra ahora</a>
+            </div>
+        </div>
+        <div class="card" style="width: 30%;">
+            <img src="https://lovefoodfeed.com/wp-content/uploads/2023/01/Valentines-cupcakes-px-1200-01-1024x1024.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Cupcake 1</h5>
+                <p class="card-text">Delicioso cupcake de chocolate</p>
+                <h5>$50</h5>
+                <a href="#" class="btn btn-primary">Compra ahora</a>
+            </div>
+        </div>
+    </div>
+
+</div>
+<hr class="hr">
