--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -1,1 +1,40 @@
-<p>register works!</p>
+<main class="main">
+  <div class="img-fondo">
+    <img src="../../../assets/images/4191015-middle.png" alt="ram" class="rem1">
+    <div class="wrapper">
+      <div class="form-box login">
+        <h2 >Registro</h2>
+        <form action="#">
+          <div class="input-box">
+            <span class="icon"><i class="bi bi-person-fill"></i></span>
+            <input type="text" required>
+            <label>Nombre de usuario</label>
+          </div>
+          <div class="input-box">
+            <span class="icon"><i class="bi bi-envelope-fill"></i></span>
+            <input type="email" required>
+            <label>Email</label>
+          </div>
+          <div class="input-box">
+            <span class="icon"><i class="bi bi-lock-fill"></i></span>
+            <input type="password" required>
+            <label>Contraseña</label>
+          </div>
+          <div class="remember-forgot">
+            <label><input type="checkbox">Acepto los terminos y condiciones</label>
+            
+          </div>
+          <button type="submit" class="btn">Registrate</button>
+          <div class="login-register">
+            <p>¿Ya tienes una cuenta?<a href="User.html" class="register-link forget">Acceder</a></p>
+          </div>
+        </form>
+      </div>
+      </div>
+      
+     </div>
+ 
+ 
+</main>
+
+<hr class="hr">
