--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,9 +1,113 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <p class="collapse navbar-collapse" id="navbarSupportedContent">
-     Copyright 2023 &copy; <a class="nav-link" routerLink=""> Store</a>, Todos los derechos reservados 
-                
-        
-      </p>
+<footer class="footer">
+  <div class="container">
+    <div class="termsuse gap-5">
+      <ul class="link-list">
+        <li class="t"><a href="#" class="a">Terminos de uso </a></li>
+        <li class="t"><a href="#" class="a">Politica de privacidad</a></li>
+        <li class="t">
+          <a href="#" class="a">Consentimientos de cookies</a>
+        </li>
+      </ul>
+      <hr class="hr">
+      <div class="row">
+        <div class="col">
+          <ul class="menu-social">
+            <h5>Contacta con nosotros</h5>
+            <li>
+              <a href="#" class="text-decoration-none">
+                <i class="bi bi-facebook"></i>
+                <a href="#" class="text-decoration-none">Facebook</a>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none">
+                <i class="bi bi-twitter"></i>
+                <a href="#" class="text-decoration-none">Twitter</a>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none">
+                <i class="bi bi-youtube"></i>
+                <a href="#" class="text-decoration-none">Youtube</a>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none">
+                <i class="bi bi-instagram"></i>
+                <a href="#" class="text-decoration-none">Instagram</a>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none">
+                <i class="bi bi-tiktok"></i>
+                <a href="#" class="text-decoration-none">Tiktok</a>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="col">
+          <ul class="menu-widget">
+            <h5 class="title-widget">Navegacion</h5>
+            <li>
+              <a href="#" class="text-decoration-none"
+                >Explorar lo mas popular</a
+              >
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none">Explorar mangas</a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none"
+                >Calendarios de lanzamientos</a
+              >
+            </li>
+            <li><a href="#" class="text-decoration-none">Noticias</a></li>
+            <li><a href="#" class="text-decoration-none">Juegos</a></li>
+          </ul>
+        </div>
+        <div class="col">
+          <ul class="menu-widget">
+            <h5 class="title-widget">Club Manga</h5>
+            <li>
+              <a href="#" class="text-decoration-none"
+                >Comienza tu Puebra Gratuita</a
+              >
+            </li>
+            <li><a href="#" class="text-decoration-none">Acerca</a></li>
+            <li>
+              <a href="#" class="text-decoration-none">Terminos de uso</a>
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none"
+                >Politica de Privacidad</a
+              >
+            </li>
+            <li><a href="#" class="text-decoration-none">Contacto</a></li>
+            <li>
+              <a href="#" class="text-decoration-none"
+                >Hazte con nuestras aplicaciones</a
+              >
+            </li>
+            <li>
+              <a href="#" class="text-decoration-none"
+                >Canjear tarjeta de regalo</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="col">
+          <ul class="menu-widget">
+            <h5 class="title-widget">Cuenta</h5>
+            <li>
+              <a href="#" class="text-decoration-none">Crear cuenta</a>
+            </li>
+            <li><a href="#" class="text-decoration-none">Acceder</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>Copyright ©</p>
+      </div>
     </div>
-  </nav>
+  </div>
+</footer>
