--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,36 +1,93 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" routerLink="">Store</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link" routerLink="">link</a>
+<header class="header ">
+  <div
+    class="container d-flex justify-content-between align-items-center space"
+  >
+    <div class="space">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary classpadding">
+        <div class="container-fluid">
+          <a class="navbar-brand logo" href="index.html"
+            ><img
+              class="img-logo"
+              src="../../../assets/images/0b1f5e5169434d1cb4e37fbfeb23fd8f-PhotoRoom.png-PhotoRoom.png"
+              alt="logo"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon mend"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link text-menu" href="index.html">Home</a>
               </li>
-          
-        </ul>
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Nicolas
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle text-menu"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Explorar
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Profile</a></li>
-                  <li><a class="dropdown-item" href="#">Sell and Purshases</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Logout</a></li>
+                  <li>
+                    <a class="dropdown-item" href="LoMasPopular.html"
+                      >Populares</a
+                    >
+                  </li>
                 </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="login">Login</a>
+
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle text-menu"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Noticias
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="notice.html">Todas las noticias</a>
+                  </li>
+                </ul>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" routerLink="register">register</a>
-              </li>
-        </ul>
-        
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+
+    <div class="iconos-menu d-flex justify-content-around gap-4">
+      <div class="haztePremium gap-2">
+        <a href="#" class="telescopio"> <i class="bi bi-gem"></i></a>
+        <a href="#" class="premium"> <h6>Hazte premium</h6></a>
+      </div>
+      <div class="search">
+        <a class="icons-color" href="Search.html"
+          ><i class="bi bi-search"></i
+        ></a>
+      </div>
+      <div class="lista">
+        <a class="icons-color" href="listaHistorial.html"
+          ><i class="bi bi-bookmark-fill"></i
+        ></a>
+      </div>
+      <div class="account">
+        <a class="icons-color" routerLink="login"
+          ><i class="bi bi-person-fill"></i
+        ></a>
       </div>
     </div>
-  </nav>
+  </div>
+</header>
