[+] app.module: importamos reactiveFormsmodule [+] register.component: implementamos formularios reactivos validacion

--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -32,7 +32,7 @@
           <div class="login-register">
             <p>
               ¿No tienes una cuenta?<a
-                routerLink="register"
+                routerLink="/register"
                 class="register-link forget"
                 >registro</a
               >
