--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -4,29 +4,31 @@
     <div class="wrapper">
       <div class="form-box login">
         <h2 >Registro</h2>
-        <form action="#">
+        <form class="form-register"
+        [formGroup]="registerForm"
+        (ngSubmit)="register()">
           <div class="input-box">
             <span class="icon"><i class="bi bi-person-fill"></i></span>
-            <input type="text" required>
+            <input type="text" required formControlName="nombre" id="nombre">
             <label>Nombre de usuario</label>
           </div>
           <div class="input-box">
             <span class="icon"><i class="bi bi-envelope-fill"></i></span>
-            <input type="email" required>
+            <input type="email" required formControlName="email" id="email">
             <label>Email</label>
           </div>
           <div class="input-box">
             <span class="icon"><i class="bi bi-lock-fill"></i></span>
-            <input type="password" required>
+            <input type="password" required formControlName="password" id="password">
             <label>Contraseña</label>
           </div>
           <div class="remember-forgot">
             <label><input type="checkbox">Acepto los terminos y condiciones</label>
             
           </div>
-          <button type="submit" class="btn">Registrate</button>
+          <button type="submit" class="btn" [disabled]="this.registerForm.invalid">Registrate</button>
           <div class="login-register">
-            <p>¿Ya tienes una cuenta?<a href="User.html" class="register-link forget">Acceder</a></p>
+            <p>¿Ya tienes una cuenta?<a routerLink="/login" class="register-link forget">Acceder</a></p>
           </div>
         </form>
       </div>
