[+] dashboard.component. define estructura html y css

--- a/src/app/protected/pages/dashboard/dashboard.component.html
+++ b/src/app/protected/pages/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
-<p>dashboard works!</p>
+<h2>Dashboard</h2>
+<p>solo se accederaa si se esta autenticando</p>
+<pre>aqui veremos los datos de usuario</pre>
+<button
+(click)="logout()"
+>Salir</button>
